--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-bitcoin-seeder
+ipsum-seeder
 ==============
 
-Bitcoin-seeder is a crawler for the Bitcoin network, which exposes a list
+ipsum-seeder is a crawler for the IPSUM network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
