--- a/README
+++ b/README
@@ -1,14 +1,12 @@
-ipsum-seeder
+gossip-seeder
 ==============
 
-ipsum-seeder is a crawler for the IPSUM network, which exposes a list
+gossip-seeder is a crawler for the GOSSIP network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
 * regularly revisits known nodes to check their availability
 * bans nodes after enough failures, or bad behaviour
-* accepts nodes down to v0.3.19 to request new IP addresses from,
-  but only reports good post-v0.3.24 nodes.
 * keeps statistics over (exponential) windows of 2 hours, 8 hours,
   1 day and 1 week, to base decisions on.
 * very low memory (a few tens of megabytes) and cpu requirements.
