--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-gossip-seeder
+telos-seeder
 ==============
 
-gossip-seeder is a crawler for the GOSSIP network, which exposes a list
+telos-seeder is a crawler for the Transcendence network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
